k8s/api/course-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: buet-hackathon-namespace
  name: course-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course
  template:
    metadata:
      labels:
        app: course
    spec:
      containers:
        - name: course
          image: 863518452741.dkr.ecr.ap-south-1.amazonaws.com/course:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: buet-hackathon-namespace
  name: course-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: course
